spec/error_unterminated_chars.expected
spec/error_unterminated_chars.kex:3:16: error: Unterminated char literal
Aborted: fix syntax errors before running.
