spec/error_unterminated_chars.kex
main do
  IO.printLine("this has to work")
  IO.printLine('t)
end